--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import LucideIcon from "../components/LucideIcon.astro";
 
   <section class="mt-10">
     <h2>
-      <span class="fancy-highlight">Education</span>
+      <span class="fancy-highlight">Educacion</span>
     </h2>
     <div class="mt-2 flex flex-col gap-6">
       {
@@ -81,7 +81,7 @@ import LucideIcon from "../components/LucideIcon.astro";
 
   <section class="mt-10">
     <h2>
-      <span class="fancy-highlight">Get In Touch</span>
+      <span class="fancy-highlight">Pongase en Contacto</span>
     </h2>
     <div class="mt-2">
       <p set:html={about.getInTouch} class="text-base-content/80" />
