--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,9 +3,9 @@ import ThemeSwitch from "./ThemeSwitch.astro";
 import { header } from "../consts.ts";
 
 const navItems = [
-  { href: "/", label: "About" },
-  { href: "/projects", label: "Projects" },
-  { href: "/blog", label: "Blog" },
+  { href: "/", label: "Sobre Mi" },
+  { href: "/projects", label: "Proyectos" },
+  //{ href: "/blog", label: "Blog" },
 ];
 
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, "");
