--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import LucideIcon from "../components/LucideIcon.astro";
         class="btn btn-primary sm:flex-1"
         href={about.resumeHref}
         target="_blank"
-        >Open Resume<SquareArrowOutUpRight size="1rem" />
+        >Mi Curriculum<SquareArrowOutUpRight size="1rem" />
       </a>
       <a class="btn btn-soft btn-accent sm:flex-1" href="/projects"
         >My Projects</a
