--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import LucideIcon from "../components/LucideIcon.astro";
         >Mi Curriculum<SquareArrowOutUpRight size="1rem" />
       </a>
       <a class="btn btn-soft btn-accent sm:flex-1" href="/projects"
-        >My Projects</a
+        >Mis Proyectos</a
       >
     </div>
   </section>
